--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
-    "@rainbow-me/rainbowkit": "^1.3.3",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-query": "^5.25.0",
+    "@web3modal/wagmi": "^4.0.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "lucide-react": "^0.320.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
@@ -23,8 +27,8 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "^1.21.4",
-    "wagmi": "^1.4.13"
+    "viem": "2.x",
+    "wagmi": "^2.5.7"
   },
   "devDependencies": {
     "@types/node": "^20",
